# ebike-mon

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configure.sh  guiconfig.sh  howto.md  lv_conf.h  requirements.txt  sdkconfig  simulator.code-workspace
app/: dashboard.c  dashboard.h
fonts/: make-fonts.sh
img/: icons.c  icons.h  make-icons.py  resize_images.py
main/: CMakeLists.txt  idf_component.yml  lvgl_demo_ui.c  mcu_main.c
simulator/: CMakeLists.txt  build.sh  configure.sh  run.sh
simulator/config/: FreeRTOSConfig.h  lvgl.config
simulator/src/: freertos_main.c  simulator_main.c
simulator/src/hal/: hal.c
src/: dashboard.c  dashboard.h  freertos_main.c  left.c  left.h  lv_os_stub.c  main.c  right.c  right.h
